# cpptest

./: CMakeLists.txt  make
src/: CMakeLists.txt  callfun.cpp  callfun.h  func.cpp  func.h  main.cpp
test/: CMakeLists.txt  test_callfun.cpp  test_func.cpp
